Put acronyms in.... that was fun ... need to figure out how to script against the document easily next time
git-svn-id: svn://dunari.cis.vtc.edu/POWER@157 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Design/Hardware/Server-Addons.tex
+++ b/Documents/Design/Hardware/Server-Addons.tex
@@ -1,27 +1,27 @@
 %% Template file for all Software/Hardware modules
 
 \subsection{Add-Ons}
-The Server provides for the computational needs of the POW-R project; 
+The Server provides for the computational needs of the \ac{POW-R} project; 
 more hardware shall be added before the utility needs of the project are met.
 
 \subsection{Server Hardware IO}
 
-\subsubsection{IP Display}
-The IP of the Server shall be displayed somewhere on it's casing. 
-The user will enter this IP into their browser to access the Display.
+\subsubsection{\ac{IP} Display}
+The \ac{IP} of the Server shall be displayed somewhere on it's casing. 
+The user will enter this \ac{IP} into their browser to access the Display.
 
-This will be achieved by connecting an Arduino via USB to the Server, and housing it inside the Server's casing. 
-The Arduino will be connected to an LCD display which will output the network IP of the Server. 
+This will be achieved by connecting an Arduino via \ac{USB} to the Server, and housing it inside the Server's casing. 
+The Arduino will be connected to an \ac{LCD} display which will output the network \ac{IP} of the Server. 
 Figure \ref{ArduinoLCD} shows the interaction between Server and Arduino.
 
 \begin{figure}
 \centering
 \includegraphics[scale=0.5]{Hardware/images/ArduinoLCD.png}
-\caption{IP Display Diagram}
+\caption{\ac{IP} Display Diagram}
 \label{ArduinoLCD}
 \end{figure}
 
-The IP address of the system can be obtained from the operating system, and sent to the Arduino one byte at a time. 
+The \ac{IP} address of the system can be obtained from the operating system, and sent to the Arduino one byte at a time. 
 This works well, since the Arduino connects over serial and thusly takes a byte at a time.
 
 \subsubsection{Power Switch}
@@ -40,5 +40,5 @@ The casing also serves to render unnecessary ports inaccessible to users.
 Lastly, the casing shall meet client expectations of what a server looks like.
 
 As far as prototyping goes, the casing can be as simple as a folded piece of aluminum
-with holes cut in it to fit the IP display, the buttons, and any ports that must be
+with holes cut in it to fit the \ac{IP} display, the buttons, and any ports that must be
 exposed. As an end-game product, the casing would probably be more professional and streamlined.
