--- a/Documents/Design/Hardware/Server-Hardware.tex
+++ b/Documents/Design/Hardware/Server-Hardware.tex
@@ -13,19 +13,19 @@ It's a small form-factor, low-power machine with the following specs:
 	\item Roughly 6" by 4"
 	\item Various connection interfaces:
 	\begin{itemize}
-		\item 2x SATA ports
-		\item Header for SATA power
+		\item 2x \ac{SATA} ports
+		\item Header for \ac{SATA} power
 		\item Ethernet port
-		\item 5x USB 2.0 ports
-		\item General Purpose Input/Output (GPIO) pin header
+		\item 5x \ac{USB} 2.0 ports
+		\item \ac{GPIO} pin header
 	\end{itemize}
 \end{itemize}
 
 \subsubsection{Potential Problems}
 If for whatever reason using this mainboard falls through, it should be noted that the requirements for the Server hardware concern not just specifications, but interfaces as well.
-In particular, this project requires at least Ethernet, 2 USB ports, a SATA port, and accessible GPIO pins.
+In particular, this project requires at least Ethernet, 2 \ac{USB} ports, a \ac{SATA} port, and accessible \ac{GPIO} pins.
 \subsubsection{Storage}
-The Server's mainboard is connected via SATA to a 40GB SSD.
+The Server's mainboard is connected via \ac{SATA} to a 40GB \ac{SSD}.
 
 \subsubsection{Power Supply}
-An adapter rated for 12VDC @ 3A is used to connect the Server's board to mains electricity.
+An adapter rated for 12\ac{VDC} @ 3\ac{A} is used to connect the Server's board to mains electricity.
