--- a/Documents/Design/Software/Backend-Authentication.tex
+++ b/Documents/Design/Software/Backend-Authentication.tex
@@ -19,7 +19,7 @@ It will verify that the user is logged in, has permissions, and even write a sho
 \subsubsection{Data Flow}
 
 Because this module is not being written by us, it will not be following the standards we are using.
-Therefore, it will be using the standard Django classes to access database objects instead of going through the REST API.
+Therefore, it will be using the standard Django classes to access database objects instead of going through the \ac{REST} \ac{API}.
 
 
 While that is not ideal, it should be OK anyway.
