--- a/Documents/Design/Software/Frontend-Devices.tex
+++ b/Documents/Design/Software/Frontend-Devices.tex
@@ -7,8 +7,8 @@
 
 This module describes the architecture of how the frontend will create pages that allow the user to manage devices in the system. 
 
-It will receive a basic framework for the web pages in HTML from the back end module and use Javascript to render the rest of the page. 
-The pages will be created with a mix of HTML and CSS from the back end and heavy Javascript from this module. 
+It will receive a basic framework for the web pages in \ac{HTML} from the back end module and use Javascript to render the rest of the page. 
+The pages will be created with a mix of \ac{HTML} and \ac{CSS} from the back end and heavy Javascript from this module. 
 The Device Management front end includes the Device Management page, Add Devices page, and the Confirm Disable Device dialog. 
 
 \subsubsection{Program Flow}
@@ -22,8 +22,8 @@ Devices cannot be deleted in order to maintain past data.
 
 \subsubsection{Data Flow}
 
-The data will be sent to the Device Management back end module through the REST API. 
-The back end returns either a confirmation of action or the requested data to the front end via the API. 
+The data will be sent to the Device Management back end module through the \ac{REST} \ac{API}. 
+The back end returns either a confirmation of action or the requested data to the front end via the \ac{API}. 
 This module receives the basic format for the web pages from the back end Device module. 
 It then fills in the additional and page-specific content. 
 
