--- a/Documents/Design/Software/Frontend-PowerBillGuestimator.tex
+++ b/Documents/Design/Software/Frontend-PowerBillGuestimator.tex
@@ -7,8 +7,8 @@
 
 This module describes the architecture of how the frontend will create pages that allow the user to view guestimates of their monthly power bill, in various scenarios.
 
-It will receive a basic framework for the web pages in HTML from the back end module and use Javascript to render the rest of the page. 
-The pages will be created with a mix of HTML and CSS from the back end and heavy Javascript from this module. 
+It will receive a basic framework for the web pages in \ac{HTML} from the back end module and use Javascript to render the rest of the page. 
+The pages will be created with a mix of \ac{HTML} and \ac{CSS} from the back end and heavy Javascript from this module. 
 
 \subsubsection{Program Flow}
 
