--- a/Documents/Design/Software/Frontend-Satellite.tex
+++ b/Documents/Design/Software/Frontend-Satellite.tex
@@ -7,8 +7,8 @@
 
 This module describes the architecture of how the frontend will create pages that allow the user to add and delete Satellites associated with the system. 
 
-It will receive a basic framework for the web pages in HTML from the back end module and use Javascript to render the rest of the page. 
-The pages will be created with a mix of HTML and CSS from the back end and heavy Javascript from this module. 
+It will receive a basic framework for the web pages in \ac{HTML} from the back end module and use Javascript to render the rest of the page. 
+The pages will be created with a mix of \ac{HTML} and \ac{CSS} from the back end and heavy Javascript from this module. 
 These pages include the Satellite Management page and the Add Satellite wizard. 
 
 \subsubsection{Program Flow}
@@ -20,8 +20,8 @@ The Satellite will then no longer be available to be associated with a Device.
 
 \subsubsection{Data Flow}
 
-The Satellite Management front end sends a request to the back end through the REST API. 
-The back end returns either a confirmation of action or the requested data to the front end via the API. 
+The Satellite Management front end sends a request to the back end through the \ac{REST} \ac{API}. 
+The back end returns either a confirmation of action or the requested data to the front end via the \ac{API}. 
 This module receives the basic format for the web pages from the back end Satellite module. 
 It then fills in the additional and page-specific content. 
 
