--- a/Documents/Design/Software/Frontend-ViewData.tex
+++ b/Documents/Design/Software/Frontend-ViewData.tex
@@ -21,7 +21,7 @@ These graphs and tables provide the user with information pertaining to the Devi
 
 \subsubsection{Data Flow}
 
-This module requests data for the graphs and tables from the back end through the REST API. 
+This module requests data for the graphs and tables from the back end through the \ac{REST} \ac{API}. 
 It receives a response and renders the graphs and tables with the data provided. 
 
 \subsubsection{Potential Problems}
