--- a/Documents/Design/Software/overview.tex
+++ b/Documents/Design/Software/overview.tex
@@ -5,12 +5,12 @@
 
 \section{Description}
 
-The POW-R project uses various pieces of software to control the Satellites, provide an API for displays, and generate pages for the primary display.
-The POW-R project will consist of the following pieces of software:
+The \ac{POW-R} project uses various pieces of software to control the Satellites, provide an \ac{API} for displays, and generate pages for the primary display.
+The \ac{POW-R} project will consist of the following pieces of software:
 \begin{itemize}
  \item The microprocessor code
  \item The server code to communicate with the Satellites
- \item The server code to present the API
+ \item The server code to present the \ac{API}
  \item The client code to render the display for the user
 \end{itemize}
 
@@ -19,7 +19,7 @@ The microprocessor code is documented in the hardware section.
 \subsection{The Display Backend}
 
 The general plan for the backend is to write modules for a Django web application.
-These modules will either be running in the background and reporting the data given to the server from the Satellites to the database through the REST API functions, or responding to user requests sent through the REST API.
+These modules will either be running in the background and reporting the data given to the server from the Satellites to the database through the \ac{REST} \ac{API} functions, or responding to user requests sent through the \ac{REST} \ac{API}.
 
 The logic for using Django as the base, and write modules around Django, is one of necessity.
 We do not have enough time or manpower to make everything we need from scratch.
@@ -27,11 +27,11 @@ Therefore, we will be using several open source utilities to assist us.
 
 
 Django will give us an easy-to-use database interface.
-It will deal with sanitizing all SQL queries, and make sure all output is escaped (i.e. no XSS).
+It will deal with sanitizing all \ac{SQL} queries, and make sure all output is escaped (i.e. no \ac{XSS}).
 Using Django gives us almost all of the security benefits listed in our non-functional requirements.
 
-To make our REST API, we will utilize an open-source Django library called tastypie.
-Tastypie gives us both model resources (that is, API elements that are basically the database tables) and the ability to create custom resources that may, or may not, map to the database.
+To make our \ac{REST} \ac{API}, we will utilize an open-source Django library called tastypie.
+Tastypie gives us both model resources (that is, \ac{API} elements that are basically the database tables) and the ability to create custom resources that may, or may not, map to the database.
 
 Another advantage of Django is that it comes with a very extensive, expandable, and adaptable authentication system.
 This will help accomplish several optional and required features almost instantly.
@@ -40,8 +40,8 @@ This will help accomplish several optional and required features almost instantl
 \subsection{The Display Frontend}
 
 The general plan for the frontend is to serve up some fairly static pages, and use extensive amounts of Javascript to fill in the content and animate things.
-The frontend will communicate with the backend through the REST API.
-This will be fairly simple since the backend API will support multiple formats, including JSON.
+The frontend will communicate with the backend through the \ac{REST} \ac{API}.
+This will be fairly simple since the backend \ac{API} will support multiple formats, including \ac{JSON}.
 
 To assist us on the frontend, we will be using several open source libraries.
 They will all serve a very clear function.
@@ -50,10 +50,10 @@ They will all serve a very clear function.
  \item Backbone.js - A library to provide basic functions dealing with fetching and syncing data with the server
  \begin{itemize}
   \item Backbone.js will deal with tracking the "model" portion of our Javascript code
-  \item Backbone.js will be made compatible with our REST API by using a small extension called backbone-tastypie
+  \item Backbone.js will be made compatible with our \ac{REST} \ac{API} by using a small extension called backbone-tastypie
  \end{itemize}
  \item iCanHaz - A library that provides advanced templating functionality
-This is client-side templating, and relies on several "fake" HTML tags
+This is client-side templating, and relies on several "fake" \ac{HTML} tags
  \item RequireJS - A library that deals with tracking and loading assets asynchronously
 This includes loading libraries that we will be using
  \item jQuery - jQuery will be used for both parts of the front end and for the AJAX support
@@ -66,24 +66,24 @@ This includes loading libraries that we will be using
 \section{Program Flow}
 
 This program will have three main "threads".
-One thread would be responsible for listening to messages from the Satellites, and another would be responsible for listening and responding to requests on the API.
+One thread would be responsible for listening to messages from the Satellites, and another would be responsible for listening and responding to requests on the \ac{API}.
 The last thread would be responsible for serving up static files for the main display.
 
 The Satellite thread will be responsible for taking the logging information provided by the Satellites and storing it in the database.
 Each Satellite will report it's information to the server once every second.
 Therefore, all this thread needs to do is react to incoming connections.
 
-The API thread would provide the Representation State Transfer API (REST) that will be used by all future displays to get data in a standardized, well defined way.
+The \ac{API} thread would provide the Representation State Transfer \ac{API} (\ac{REST}) that will be used by all future displays to get data in a standardized, well defined way.
 This thread will NOT be serving up images or page templates.
 This is done to make best use of the caching functionality included in the HTTP server software that will be used.
 
 The last thread will be running a "dumb" web page that servers up static HTML and Javascript files.
-This thread will also retrieve images and CSS files from the server.
+This thread will also retrieve images and \ac{CSS} files from the server.
 
 \section{Data Flow}
 
-This application will use a SQL database to store all data.
-Each module will interact with the REST API, which interacts with the database as needed.
+This application will use a \ac{SQL} database to store all data.
+Each module will interact with the \ac{REST} \ac{API}, which interacts with the database as needed.
 
 \begin{figure}[H]
 \centering
@@ -93,9 +93,9 @@ Each module will interact with the REST API, which interacts with the database a
 \end{figure}
 
 Figure \ref{img:S_DataFlowDiagram} shows how various components will be interacting.
-Notice that the database is not directly accessed by any components, but goes through the REST API instead.
+Notice that the database is not directly accessed by any components, but goes through the \ac{REST} \ac{API} instead.
 This allows us to provide a standard interface that should be more-or-less accessible from any programming language or system.
-This will also allow us to use some well-known security features, such as TLS.
+This will also allow us to use some well-known security features, such as \ac{TLS}.
 
 \section{Description of Software Modules}
 
@@ -110,8 +110,8 @@ This will also allow us to use some well-known security features, such as TLS.
 
 Figure \ref{img:S_PackageListing} contains all the Django modules that will be created inside the actual Django "website" itself.
 This is basically the folder hierarchy of our web application source code.
-The "power" folder consists of folders for each module (not including the various open-source modules we are using, since those are being controlled via PIP).
-Each of these contains a \filename{models.py} file, which specifies what the database for that module should look like, an \filename{\_\_init\_\_.py} file which will register the module with the REST API, and whatever other files that module needs.
+The "power" folder consists of folders for each module (not including the various open-source modules we are using, since those are being controlled via \ac{PIP}).
+Each of these contains a \filename{models.py} file, which specifies what the database for that module should look like, an \filename{\_\_init\_\_.py} file which will register the module with the \ac{REST} \ac{API}, and whatever other files that module needs.
 
 
 \section{Potential Problems}
@@ -121,7 +121,7 @@ This is a big problem because of the time constraints on this project, and will 
 This can lead to frustration, especially in light of the fact that we will need to learn the languages in addition to the libraries.
 
 However, using well developed and designed libraries allows us to skip over a good part of the development and planning.
-We will be able to use extensive API's without taking responsibility for maintaining the software.
+We will be able to use extensive \ac{API}'s without taking responsibility for maintaining the software.
 This will allow us to focus on our product instead of the all the small things that make it up.
 
 
