--- a/Documents/Design/Hardware/overview.tex
+++ b/Documents/Design/Hardware/overview.tex
@@ -5,11 +5,11 @@
 
 \section{Description}
 
-The POW-R project is comprised of two main hardware components, the Server and the Satellites. 
+The \ac{POW-R} project is comprised of two main hardware components, the Server and the Satellites. 
 The Server refers to the physical hardware from which the Display shall be served. 
 It also acts as the data center for all Satellites associated to it, collecting data and storing it in a hard drive. 
 The Satellites will talk over ZigBee specification to the one Zigbee module connected to the Server. 
-That one Zigbee module can talk to the Server over Universal Serial Bus (USB).
+That one Zigbee module can talk to the Server over \ac{USB}.
  
 Figure \ref{SystemOverview} shows the layout of the hardware system.
 
@@ -29,7 +29,7 @@ Figure \ref{SystemOverview} shows the layout of the hardware system.
 \section{The Satellites}
 The Satellites are made up of two sets of hardware: 
 Instruments for measuring current and voltage, and radios for communicating that data to the Server. 
-The end product shall have a hard casing around it, NEMA 5-15 sockets on one side, and prongs for a NEMA 5-15 male end on the other. 
+The end product shall have a hard casing around it, \ac{NEMA} 5-15 sockets on one side, and prongs for a \ac{NEMA} 5-15 male end on the other. 
 However, it should be noted that prototyping will most likely involve all of the hardware being spread out on breadboards.
 \input{Hardware/Satellite-Circuit}
 \input{Hardware/Satellite-Hardware}
