--- a/Documents/Design/Software/Frontend-FactoryReset.tex
+++ b/Documents/Design/Software/Frontend-FactoryReset.tex
@@ -6,7 +6,7 @@
 \subsubsection{Description}
 
 This module describes the architecture of how the frontend will create pages that allow the user to reset the system back to factory default settings.
-It will receive a basic framework for the web pages in HTML from the back end module and use Javascript to render the rest of the page. 
+It will receive a basic framework for the web pages in \ac{HTML} from the back end module and use Javascript to render the rest of the page. 
 This front end module will be a page that will allow the user to initiate a Factory Reset.
 
 \subsubsection{Program Flow}
