--- a/Documents/Design/Hardware/Satellite-ZigBee.tex
+++ b/Documents/Design/Hardware/Satellite-ZigBee.tex
@@ -1,7 +1,7 @@
 %% Template file for all Software/Hardware modules
 
 \subsection{ZigBee Standard}
-ZigBee is a standard that uses \ac{IEEE} 802.15.4 wireless protocol as it's foundation. It's 
+ZigBee is a standard that uses \ac{IEEE} 802.15.4 wireless protocol as it's foundation \cite{Book:ZigBee}. It's 
 particularly useful for setting up ad-hoc mesh networks. Much like how any Bluetooth
 devices can talk to each other, any ZigBee devices nearby can talk to each other (so 
 long as they have the proper permissions).
