--- a/Documents/Design/index.tex
+++ b/Documents/Design/index.tex
@@ -121,4 +121,9 @@
 	\acro{XSS}{Cross-site scripting}
 	\acro{YAML}{YAML Ain't Markup Language}
 \end{acronym}
+
+% References
+\bibliographystyle{plain}
+\bibliography{biblo}
+
 \end{document}
