Added Use Cases section
git-svn-id: svn://dunari.cis.vtc.edu/POWER@168 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Design/index.tex
+++ b/Documents/Design/index.tex
@@ -39,7 +39,7 @@
 \begin{document}
 
 % Title and authors
-\title{POW-R High Level Architecture Document}
+\title{POW-R Low Level Design Document}
 \author{
   Grace De Geus\\
   \texttt{gdegeus@vtc.edu}
@@ -88,6 +88,40 @@
 \textbf{\addcontentsline{toc}{chapter}{List of Figures}}
 
 \newpage
+%Use Cases
+\input{Use-Cases/overview}
+\newpage
+\input{Use-Cases/Logging-In}
+\newpage
+\input{Use-Cases/Logging-Out}
+\newpage
+\input{Use-Cases/Monthly-Consumption}
+\newpage
+\input{Use-Cases/Largest-Consumer}
+\newpage
+\input{Use-Cases/Consumption-Over-Time}
+\newpage
+\input{Use-Cases/Adjust-Power-Cost}
+\newpage
+\input{Use-Cases/Add-User}
+\newpage
+\input{Use-Cases/Delete-User}
+\newpage
+\input{Use-Cases/Add-Device}
+\newpage
+\input{Use-Cases/Rename-Device}
+\newpage
+\input{Use-Cases/Disable-Device}
+\newpage
+\input{Use-Cases/Re-enable-Device}
+\newpage
+\input{Use-Cases/Remap-Device}
+\newpage
+\input{Use-Cases/Add-Satellite}
+\newpage
+\input{Use-Cases/Remove-Satellite}
+\newpage
+
 
 \section{Acronyms}
 \begin{acronym}
