Added a script to generate tex from our codes, and found a way to include those in the document.
Simply write \input{codes/<module>/<file>.py} to include it.


git-svn-id: svn://dunari.cis.vtc.edu/POWER@172 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Design/Software/Backend-Devices.tex
+++ b/Documents/Design/Software/Backend-Devices.tex
@@ -35,3 +35,11 @@ These associations not be static, Devices will be able to be moved from one loca
 By associating the Device with each new Satellite it is physically connected to we can track that Device regardless of its location. 
 
 This module will implement the associations between the Devices and the Satellites. 
+
+\subsubsection{Objects}
+
+The Device module consists of the following objects:
+
+\paragraph{models.py}
+
+\input{codes/device/models.py}
