--- a/Documents/Design/Use-Cases/Add-Device.tex
+++ b/Documents/Design/Use-Cases/Add-Device.tex
@@ -29,11 +29,11 @@ The display prompts the user for information about the device, including:
 	\item Name
 	\begin{itemize}
 		\item Optional: room, location in room, owner. These will be used to guide the user in coming up with a unique name
-	\end{itemization}
+	\end{itemize}
 	\item What Satellite it is plugged into
-	\begin{itemization}
+	\begin{itemize}
 		\item Optional, may be not be plugged in
-	\end{itemization}
+	\end{itemize}
 \end{itemize}
 The user fills in the requested information\\
 The user clicks an "OK" or "Submit" button\\
