--- a/Documents/Design/index.tex
+++ b/Documents/Design/index.tex
@@ -11,7 +11,8 @@
 \usepackage[hyphens]{url}
 \usepackage[hypertexnames=false, bookmarks=true, bookmarksnumbered=true, breaklinks=true, linkbordercolor={1 1 1}]{hyperref}
 \usepackage{listings}
-
+\usepackage{standalone}
+%\usepackage{includex}
 
 %% Chapter titles
 \usepackage[T1]{fontenc}
@@ -34,6 +35,9 @@
 
 \usepackage{acronym}
 \acrodef{NEMA}[NEMA]{National Electrical Manufacturers Association}
+
+% This sets up the coloring for all the included codes
+\input{pygmentize}
 
 
 \begin{document}
@@ -81,12 +85,6 @@
 % Software design
 \input{Software/overview}
 
-% Stuff about the server
-\input{Server/overview}
-\newpage
-\listoffigures
-\textbf{\addcontentsline{toc}{chapter}{List of Figures}}
-
 \newpage
 %Use Cases
 \input{Use-Cases/overview}
@@ -122,6 +120,11 @@
 \input{Use-Cases/Remove-Satellite}
 \newpage
 
+% Stuff about the server
+\input{Server/overview}
+\newpage
+\listoffigures
+\textbf{\addcontentsline{toc}{chapter}{List of Figures}}
 
 \section{Acronyms}
 \begin{acronym}
