Found a way to turn code listings into a table
git-svn-id: svn://dunari.cis.vtc.edu/POWER@173 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Design/Software/Backend-Devices.tex
+++ b/Documents/Design/Software/Backend-Devices.tex
@@ -40,6 +40,7 @@ This module will implement the associations between the Devices and the Satellit
 
 The Device module consists of the following objects:
 
-\paragraph{models.py}
-
+\begin{table}
+\caption{device/models.py}
 \input{codes/device/models.py}
+\end{table}
