--- a/Documents/Design/index.tex
+++ b/Documents/Design/index.tex
@@ -72,6 +72,13 @@
 \newpage
 
 
+\listoffigures
+\textbf{\addcontentsline{toc}{chapter}{List of Figures}}
+\newpage
+
+\listoftables
+\textbf{\addcontentsline{toc}{chapter}{List of Tables}}
+\newpage
 
 \setcounter{page}{1}
 \pagenumbering{arabic}
@@ -122,9 +129,6 @@
 
 % Stuff about the server
 \input{Server/overview}
-\newpage
-\listoffigures
-\textbf{\addcontentsline{toc}{chapter}{List of Figures}}
 
 \section{Acronyms}
 \begin{acronym}
@@ -158,6 +162,7 @@
 	\acro{XSS}{Cross-site scripting}
 	\acro{YAML}{YAML Ain't Markup Language}
 \end{acronym}
+\newpage
 
 % References
 \bibliographystyle{plain}
