Made the table a little bit better, especially the header.
git-svn-id: svn://dunari.cis.vtc.edu/POWER@174 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Design/Software/Backend-Devices.tex
+++ b/Documents/Design/Software/Backend-Devices.tex
@@ -40,7 +40,9 @@ This module will implement the associations between the Devices and the Satellit
 
 The Device module consists of the following objects:
 
-\begin{table}
-\caption{device/models.py}
-\input{codes/device/models.py}
+\begin{table}[H]
+  \centering
+  \caption{device/models.py}
+  \label{code:device/models}
+  \input{codes/device/models.py}
 \end{table}
