--- a/Documents/Design/index.tex
+++ b/Documents/Design/index.tex
@@ -7,6 +7,7 @@
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{color}
+\usepackage{xcolor}
 \usepackage{parskip}
 \usepackage[hyphens]{url}
 \usepackage[hypertexnames=false, bookmarks=true, bookmarksnumbered=true, breaklinks=true, linkbordercolor={1 1 1}]{hyperref}
@@ -38,6 +39,12 @@
 
 % This sets up the coloring for all the included codes
 \input{pygmentize}
+
+% And this labels it nicely
+\usepackage{caption}
+\DeclareCaptionFont{white}{\color{white}}
+\DeclareCaptionFormat{listing}{\colorbox{gray}{\parbox{\textwidth}{#1#2#3}}}
+\captionsetup[table]{format=listing,labelfont=white,textfont=white}
 
 
 \begin{document}
