Added the pygmentize.tex file, maybe
git-svn-id: svn://dunari.cis.vtc.edu/POWER@177 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Design/index.tex
+++ b/Documents/Design/index.tex
@@ -14,7 +14,9 @@
 \usepackage{listings}
 \usepackage{standalone}
 %\usepackage{includex}
-
+\begin{tiny}
+•
+\end{tiny}
 %% Chapter titles
 \usepackage[T1]{fontenc}
 \usepackage{titlesec, blindtext, color}
